--- a/index.html
+++ b/index.html
@@ -6,33 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js" defer></script>
-    <title>Document</title>
+    <title>Calculator</title>
 </head>
 <body>
 
     <div class="calculator">
         <div class="screen">
-            <div class="upper-part">123</div>
-            <div class="lower-part">456</div>
+            <div class="upper-part"></div>
+            <div class="lower-part"></div>
         </div>
-        <button class="span-two">AC</button>
-        <button>DEL</button>
-        <button>÷</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>*</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>+</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button> - </button>
-        <button>.</button>
-        <button>0</button>
-        <button class="span-two"> = </button>
+        <button class="span-two all-clear">AC</button>
+        <button class="delete">DEL</button>
+        <button class="operation">/</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="operation">*</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="operation">+</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="operation">-</button>
+        <button class="dot">.</button>
+        <button class="number">0</button>
+        <button class="span-two equals"> =</button>
     </div>
     
 </body>
